# stdlibfortran

./: CMakeLists.txt  Dockerfile  INTEGRATION_PROMPT.md  check_versions.py
.github/workflows/: CI.yml
config/: fypp_deployment.py
doc/specs/: stdlib_intrinsics.md
src/: stdlib_intrinsics.f90  stdlib_intrinsics.fypp  stdlib_intrinsics_sum.f90  stdlib_intrinsics_sum.fypp
test/: test_intrinsics.f90  test_intrinsics_accuracy.f90  test_intrinsics_pathological.f90
test/intrinsics/: CMakeLists.txt  performance_monitor.fypp  test_intrinsics.fypp  test_intrinsics_accuracy.fypp  test_intrinsics_pathological.fypp  test_intrinsics_performance.f90
